--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
+@import '@angular/material/prebuilt-themes/purple-green.css';
+
 /* You can add global styles to this file, and also import other style files */
+.full-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.center {
+  text-align: center;
+}
