--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -17,3 +17,21 @@ mat-label {
   font-size: 20px;
   font-weight: 800;
 }
+
+.text-red {
+  color: red;
+}
+
+.loginFont {
+  font-size: 15px;
+  font-weight: 700;
+}
+
+button {
+  width: 50%;
+  font-size: 20px;
+}
+
+input {
+  padding-left: 10px;
+}
