Home academia listo front

--- a/src/app/academia/home/home.component.html
+++ b/src/app/academia/home/home.component.html
@@ -1,5 +1,88 @@
 <app-sidenav></app-sidenav>
-    <p>
-      acadmia home works!
-    </p>
-  
+<div class="filler-top"></div>
+<div class="container-academics">
+
+  <mat-card class="card-person">
+    
+    <mat-card-header>
+      <div mat-card-avatar><mat-icon>person_pin</mat-icon></div>
+      <mat-card-title>Pepito Peerez</mat-card-title>
+      <mat-card-subtitle>Academia</mat-card-subtitle>
+    </mat-card-header>
+
+    <mat-card-content class="center">
+      <img mat-card-image class="img-home-persone" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Persona foto de Perfil">
+      <p>
+        <b>Status de suscripción:</b> Activo
+      </p>
+      <p>
+        <b>Suscripción vence el:</b> 31/31/2021
+      </p>
+      <p>
+        <b>Último pago realizado:</b> 12/12/2020
+      </p>
+    </mat-card-content>
+
+    <mat-card-actions class="center">
+      <button mat-button>
+        <mat-icon>edit</mat-icon>
+        &nbsp; 
+        Editar Perfil
+      </button>
+    </mat-card-actions>
+
+  </mat-card>
+
+  <mat-card class="card-person-actions">
+
+    <mat-card-header>
+      <mat-card-title>Pagos a la Academia Profit Takers</mat-card-title>
+      <mat-card-subtitle class="subtitle-actions">
+        Por medio de esta opción podrás tomar una foto de tu recibo de pago para 
+        continuar tu Suscripción o ver el historial de tus pagos realizados...
+      </mat-card-subtitle>
+    </mat-card-header>
+
+    <mat-card-actions class="center">
+      <button mat-button>
+        <mat-icon>add_a_photo</mat-icon>
+        &nbsp; 
+        Cargar Pago
+      </button>
+      <button mat-button>
+        <mat-icon>history</mat-icon>
+        &nbsp; 
+        Historial de pagos
+      </button>
+    </mat-card-actions>
+
+  </mat-card>
+
+  <mat-card class="card-person-actions">
+
+    <mat-card-header>
+      <mat-card-title>Historial de Movimientos</mat-card-title>
+      <mat-card-subtitle class="subtitle-actions">
+        Ver el Trading que has tenido con Profit Takers
+      </mat-card-subtitle>
+    </mat-card-header>
+
+    <mat-card-actions class="center">
+      <button mat-button>
+        <mat-icon>receipt</mat-icon>
+        &nbsp; 
+        Ver mis Movimientos
+      </button>
+    </mat-card-actions>
+
+  </mat-card>
+
+  <footer class="rights footerApp">
+      Profit Takers LLC
+      <br/>
+      Bogotá - Colombia - 2019
+      <br/>
+      All rights reserved.
+  </footer>
+
+</div>
