--- a/src/app/academia/toolbar/toolbar.component.html
+++ b/src/app/academia/toolbar/toolbar.component.html
@@ -16,10 +16,9 @@
     &nbsp;
     Home  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <span style="color:#424242;">_</span>
   </button>
   <button mat-menu-item>
-    <mat-icon>monetization_on</mat-icon>
+    <mat-icon>add_a_photo</mat-icon>
     &nbsp;
     Cargar nuevo pago
   </button>
@@ -42,5 +41,10 @@
     <mat-icon>persone</mat-icon>
     &nbsp;
     Actualizar perfil
+  </button>
+  <button mat-menu-item>
+    <mat-icon>directions_run</mat-icon>
+    &nbsp;
+    Cerrar sesión
   </button>
 </mat-menu>
