--- a/src/app/admin/admin-home/admin-home.component.html
+++ b/src/app/admin/admin-home/admin-home.component.html
@@ -2,3 +2,6 @@
 <p>
   admin-home works!
 </p>
+<button mat-fab class="md-fab mat-fab-bottom-right" aria-label="Add a category">
+  <mat-icon>exposure</mat-icon>
+</button>
