--- a/src/app/admin/toolbar-admin/toolbar-admin.component.html
+++ b/src/app/admin/toolbar-admin/toolbar-admin.component.html
@@ -15,7 +15,6 @@
     &nbsp;
     Home  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <span style="color:#424242;">_</span>
   </button>
   <button mat-menu-item>
     <mat-icon>account_balance</mat-icon>
@@ -33,7 +32,7 @@
     Movimientos: Ver
   </button>
   <button mat-menu-item>
-    <mat-icon>exposure</mat-icon>
+    <mat-icon>trending_up</mat-icon>
     &nbsp;
     Movimientos: Crear nuevo
   </button>
