--- a/src/app/academia/home/home.component.html
+++ b/src/app/academia/home/home.component.html
@@ -1,5 +1,8 @@
 <app-sidenav></app-sidenav>
+
+<!-- Para dejar un espacio superior para el toolbar -->
 <div class="filler-top"></div>
+
 <div class="container-academics">
 
   <mat-card class="card-person">
