--- a/src/app/academia/home/home.component.html
+++ b/src/app/academia/home/home.component.html
@@ -27,7 +27,7 @@
     </mat-card-content>
 
     <mat-card-actions class="center">
-      <button mat-button>
+      <button mat-button (click)="actualizarPerfil()">
         <mat-icon>edit</mat-icon>
         &nbsp; 
         Editar Perfil
