Interfaces admin principales

--- a/src/app/academia/toolbar/toolbar.component.html
+++ b/src/app/academia/toolbar/toolbar.component.html
@@ -42,7 +42,7 @@
     &nbsp;
     Actualizar perfil
   </button>
-  <button mat-menu-item>
+  <button mat-menu-item (click)="logout()">
     <mat-icon>directions_run</mat-icon>
     &nbsp;
     Cerrar sesión
