--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -52,12 +52,14 @@
             <mat-form-field class="full-width" color="accent">
               <mat-label id="email">Ingrese su correo electr&oacute;nico</mat-label>
               <input matInput [(ngModel)]="email" name="username" required>
+              <mat-icon matSuffix>email</mat-icon>
             </mat-form-field>
           </div>
           <div class="col-md-12 center">
             <mat-form-field class="full-width" color="accent">
               <mat-label id="pass">Ingrese su contrase&ntilde;a</mat-label>
-              <input matInput  [(ngModel)]="password" type="password" name="password" required>
+              <input matInput  [(ngModel)]="password" [type]="typePassw" name="password" required>
+              <mat-icon matSuffix (click)="tooglePassword()">{{ iconPassw }}</mat-icon>
             </mat-form-field>
           </div>
         </div>
@@ -72,8 +74,9 @@
       </div>
       <div class="col-md-12 center loginFont">
         ¿ No tienes cuenta en la Academia Profit ?
-        <br/>
-        <a href="#">Solicita una nueva aquí</a>
+        <br/><br/>
+        <a href (click)="$event.preventDefault();applyForNewUseraccount();">Solicita una aqu&iacute;</a>
+        <br/><br/>
       </div>
     </div>
   </mat-card>
