Registrar Pago interfaz

--- a/src/app/academia/home/home.component.html
+++ b/src/app/academia/home/home.component.html
@@ -47,7 +47,7 @@
     </mat-card-header>
 
     <mat-card-actions class="center">
-      <button mat-button>
+      <button mat-button (click)="nuevoPago()">
         <mat-icon>add_a_photo</mat-icon>
         &nbsp; 
         Cargar Pago
