--- a/src/app/academia/toolbar/toolbar.component.html
+++ b/src/app/academia/toolbar/toolbar.component.html
@@ -17,7 +17,7 @@
     Home  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   </button>
-  <button mat-menu-item>
+  <button mat-menu-item (click)="nuevoPago()">
     <mat-icon>add_a_photo</mat-icon>
     &nbsp;
     Cargar nuevo pago
