--- a/src/app/academia/perfil/perfil.component.html
+++ b/src/app/academia/perfil/perfil.component.html
@@ -120,4 +120,12 @@
     </div>
   </form>
 
+  <div class="row justify-content-md-center">
+    <div class="col-xs-12 center">
+      <br/>
+      <a href (click)="$event.preventDefault();goHome();" class="href-red">Ir al inicio</a>
+    </div>
+  </div>
+  <br/><br/><br/>
+
 </div>
